--- a/WPF_Watcher/WPF_Watcher/WPF_Watcher/MainWindow.xaml
+++ b/WPF_Watcher/WPF_Watcher/WPF_Watcher/MainWindow.xaml
@@ -6,12 +6,12 @@
         xmlns:local="clr-namespace:WPF_Watcher"
         mc:Ignorable="d"
         Title="Watch your files" Height="450" Width="800"
-        ResizeMode="CanResizeWithGrip">
+        ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="43*"/>
-            <RowDefinition Height="45*"/>
-            <RowDefinition Height="230*"/>
+            <RowDefinition Height="57*"/>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="290*"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -19,10 +19,12 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Label Content="Путь к файлу:" HorizontalAlignment="Left" Grid.Row="0" Grid.Column="0" Width="83" Height="30"/>
-        <TextBox Name="FileWay" HorizontalAlignment="Left" Height="23" Margin="87,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="695" Grid.ColumnSpan="3"/>
-        <Button Name="Start"  Content="Start" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" Height="20" Background="Green" Click="Start_Click" />
-        <ListBox Name="Display" Grid.ColumnSpan="3" Grid.RowSpan="2" Grid.Row="2" HorizontalAlignment="Center" Width="780" Margin="5"/>
-        <Label Content="Logs" Grid.Column="1" Grid.Row="1" Foreground="Crimson" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" />
+        <Label Content="Путь к файлу:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox Name="FileWay" HorizontalAlignment="Left" Height="23" Margin="87,17,0,17" TextWrapping="Wrap" VerticalAlignment="Center" Width="695" Grid.ColumnSpan="3"/>
+        <Button Name="Start"  Content="Start" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Start_Click" Template="{Binding Source={StaticResource ResourceKey=Button_Template}}"/>
+        <ListBox Name="Display" Grid.ColumnSpan="3" Grid.Row="2" HorizontalAlignment="Center" Width="780" Margin="5"/>
+        <Label Content="Logs" Grid.Column="1" Grid.Row="1" Foreground="Crimson" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
+        <Button Content="Stop" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" Name="Stop" Click="Stop_Click"/>
+        <Button Name="Clear" Content="Clear" Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Center" Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" Margin="0 0 0 5" Click="Clear_Click"/>
     </Grid>
 </Window>
